# freecs

./: .gitignore  Cargo.toml  README.md  optimizations.md
.github/workflows/: ci.yml
benches/: dynamic_benchmarks.rs  ecs_benchmarks.rs
examples/: advanced.rs  asteroids.rs  bench.rs  bench2.rs  boids.rs  cubes.rs  demo.rs  dynamic.rs  multi_world.rs  pong.rs  scheduling.rs  simple.rs  tour.rs  tower-defense-cards.rs  tower-defense-dynamic.rs  tower-defense.rs  wolfenstein.rs
src/: dynamic.rs  lib.rs  state.rs  system_param.rs
