[package]
name = "freecs"
version = "1.3.0"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
description = """
A high-performance, archetype-based Entity Component System (ECS) written in Rust.
"""
homepage = "https://github.com/matthewjberger/freecs"
repository = "https://github.com/matthewjberger/freecs"
keywords = ["macro", "ecs"]
license = "MIT"
edition = "2024"
rust-version = "1.90"

[lib]
doctest = false

[dependencies]
paste = "1.0.15"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rayon = "1.11"

[dev-dependencies]
macroquad = "0.4.14"
rand = "0.9.2"
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "ecs_benchmarks"
harness = false
