[package]
name = "freecs"
version = "3.0.3"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
description = """
A high-performance, archetype-based Entity Component System (ECS) written in Rust.
"""
homepage = "https://github.com/matthewjberger/freecs"
repository = "https://github.com/matthewjberger/freecs"
keywords = ["macro", "ecs"]
license = "MIT"
edition = "2024"
rust-version = "1.90"

[features]
default = ["serde"]
serde = ["dep:serde"]
dynamic = []
audio = []

[dependencies]
paste = { package = "pastey", version = "0.2" }
serde = { version = "1.0", features = ["derive"], optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rayon = "1.11"

[dev-dependencies]
macroquad = "0.4.14"
rand = "0.9.2"
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "ecs_benchmarks"
harness = false
